--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "iview": "^3.3.2",
     "js-cookie": "^2.2.0",
     "sass-loader": "^7.1.0",
