--- a/.eslintignore
+++ b/.eslintignore
@@ -5,4 +5,6 @@
 /src/*
 src/assets/js/*.js
 src/assets/js/Lang/*.js
-src/components/views/riskmap/*.vue
+src/components/riskmap/*.vue
+src/components/*/*.vue
+src/components/riskdata/mixins/riskMap-mixins.js
