--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-accordion-menu": "^0.1.46",
     "vue-axios": "^2.1.4",
     "vue-cookies": "^1.5.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
